@@ -1,5 +1,6 @@
 Changes in 4.0.3:
 - Fix bug causing wrong encoding to be used when the default save location of a group is read (244873)
+- Fix crash in QueueManagerWidget when moving torrents in the queue
 
 Changes in 4.0.2:
 - Fix wrong X-KDE-PluginInfo-Name in ktzeroconfplugin.desktop
